@@ -90,7 +90,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-                <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+                <argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/${org.mockito.version}/mockito-core-${org.mockito.version}.jar -Xshare:off</argLine>
             </configuration>
         </plugin>
         <plugin>
